fixed the wrapping problem in hobbies section

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -108,10 +108,12 @@ body  {
   background-color: #2FCF2D;
   color: white;
   text-align: center;
-  border-radius: 2px;
+  border-radius: 3px;
   box-shadow: 0 1px 0 rgba(0,0,0,.25);
   padding: 5px;
-  margin:3px;
+  margin-left:8px;
+  margin-right:8px;
+  margin-top:15px;
   padding-right:65px;
 
 
